logs/ng.kit.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ng'...
Listing './lib/python3.5/site-packages/ng/kit'...
Listing './lib/python3.5/site-packages/ng/kit/annotationremover'...
Listing './lib/python3.5/site-packages/ng/kit/annotationremover/browser'...
Listing './lib/python3.5/site-packages/ng/kit/etc'...
Listing './lib/python3.5/site-packages/ng/kit/fixintid'...
Compiling './lib/python3.5/site-packages/ng/kit/fixintid/fixintid.py'...
***   File "./lib/python3.5/site-packages/ng/kit/fixintid/fixintid.py", line 21
    print "getData"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ng/kit/fixparent'...
Listing './lib/python3.5/site-packages/ng/kit/fixparent/browser'...
Listing './lib/python3.5/site-packages/ng/kit/interfaceswitcher'...
Compiling './lib/python3.5/site-packages/ng/kit/interfaceswitcher/interfaceswitcher.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (interfaceswitcher.py, line 22)
Compiling './lib/python3.5/site-packages/ng/kit/interfaceswitcher/interfacevocabulary.py'...
***   File "./lib/python3.5/site-packages/ng/kit/interfaceswitcher/interfacevocabulary.py", line 33
    key = lambda (name,interface): name)
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng.kit-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
